...
import 'package:image_picker/image_picker.dart';
import 'package:core/domains/domains.dart';
import 'package:responsive_framework/responsive_framework.dart';

class CompanyInfoForm extends StatelessWidget {
  final FormArguments formArguments;
  CompanyInfoForm(this.formArguments);

  @override
  Widget build(BuildContext context) {
    return BlocBuilder<AuthBloc, AuthState>(builder: (context, state) {
      return CompanyPage(formArguments.message, state.authenticate!);
    });
...
                                        ? "${companyAddress!.city!} ${companyAddress!.country!}"
                                        : "No address yet",
                                    key: Key('addressLabel'))),
                            SizedBox(
                                width: 100,
                                child: ElevatedButton(
                                  key: Key('address'),
                                  onPressed: isAdmin
                                      ? () async {
                                          var result = await showDialog(
                                              barrierDismissible: true,
                                              context: context,
                                              builder: (BuildContext context) {
...
                          SizedBox(height: 10),
                          Row(children: [
                            Expanded(
                                child: Visibility(
                                    visible: isAdmin,
                                    child: ElevatedButton(
                                        key: Key('updateCompany'),
                                        child: Text(
                                          company.partyId == null
                                              ? 'Create'
                                              : 'Update',
                                        ),
                                        onPressed: isAdmin
...
