...
          child: ListView.builder(
            itemCount: options.length + 1,
            itemBuilder: (context, i) {
              if (i == 0)
                return DrawerHeader(
                    child: InkWell(
                        key: Key('tapUser'),
                        onTap: () async {
                          await showDialog(
                              barrierDismissible: true,
                              context: context,
                              builder: (BuildContext context) {
                                return UserForm(user: authenticate.user!);
...
