...
                }
              }
            }),
        SizedBox(width: 10),
        Expanded(
            child: ElevatedButton(
                key: Key('updateUser'),
                child: Text(updatedUser.partyId == null ? 'Create' : 'Update'),
                onPressed: () async {
                  if (_formKey.currentState!.validate()) {
                    updatedUser = updatedUser.copyWith(
                        firstName: _firstNameController.text,
                        lastName: _lastNameController.text,
...
